--- a/WebContent/css/styleAdmin.css
+++ b/WebContent/css/styleAdmin.css
@@ -1588,7 +1588,7 @@ div.box {
 
 #deleteUser, #deleteUnit, #deleteSpecialist, #deleteSupplyArea, #deleteSupply, #deleteProduct, #deleteRequest, #refreshUser, #dischargeUser, 
 #hospitalizeUser, #deleteService, #deleteProtocol, #deleteEvaluation, #deleteVitalSign, #deleteCash, #printUser, #closeAccount, #closeAccount2, 
-#discount, #generateInvoice, #editStatus, #payment, #deliverBill {
+#discount, #editStatus, #payment, #deliverBill {
 	position: absolute;
 	text-align: center;
 	width: 295px;
@@ -1605,7 +1605,7 @@ div.box {
 .short-alert {
 	position: absolute;
 	text-align: center;
-	width: 812px;
+	width: 295px;
 	height: 220px;
 	line-height: 1.5em;
 	background: url('../images/dialogo.png') left top no-repeat;
